Fixes #4269: ComboBox/TitlePane: drop down arrows not displaying in high contrast mode. Commit for Pete Brunet.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10803 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -156,6 +156,9 @@
 	/* visibility:hidden;  */
 	display:none; 
 }
+.dijit_a11y .dijitComboBox .dijitDownArrowButtonChar {
+	display:inline; 
+}
 .tundra .dijitComboBox .dijitDownArrowButtonInner {
 	width:16px; 
 	height:16px; 
@@ -460,6 +463,9 @@
 }
 .tundra .dijitTitlePane .dijitArrowNodeInner { 
 	visibility:hidden;
+}
+.dijit_a11y .dijitTitlePane .dijitArrowNodeInner { 
+	visibility:visible;
 }
 
 .tundra .dijitTitlePaneTitle .dijitOpenCloseArrowOuter {
